[gd_scene load_steps=4 format=3 uid="uid://dy8wv0viambpc"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_dyxyl"]
[ext_resource type="FontFile" uid="uid://domppl16314ho" path="res://assets/fonts/PixelOperator8.ttf" id="2_30mfx"]
[ext_resource type="Texture2D" uid="uid://dx8717eq4a2st" path="res://assets/sprites/health_bar.png" id="3_ot5d8"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dyxyl")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 223.0
offset_bottom = 187.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.0
offset_top = 16.0
offset_right = 51.0
offset_bottom = 82.0
grow_horizontal = 2

[node name="MoneyLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_30mfx")
theme_override_font_sizes/font_size = 16
text = "Nutriece: 0"

[node name="MycelButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_30mfx")
theme_override_font_sizes/font_size = 16
text = "Place Mycel"

[node name="TurretButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_30mfx")
theme_override_font_sizes/font_size = 16
text = "Place Turret"

[node name="WallButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_30mfx")
theme_override_font_sizes/font_size = 16
text = "Place Wall"

[node name="RemoveButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_30mfx")
theme_override_font_sizes/font_size = 16
text = "Remove"

[node name="HealthBar" type="TextureProgressBar" parent="Panel/VBoxContainer"]
layout_mode = 2
value = 100.0
texture_progress = ExtResource("3_ot5d8")

[connection signal="pressed" from="Panel/VBoxContainer/MycelButton" to="." method="_on_mycel_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/TurretButton" to="." method="_on_turret_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/WallButton" to="." method="_on_turret_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/WallButton" to="." method="_on_wall_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/RemoveButton" to="." method="_on_turret_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/RemoveButton" to="." method="_on_wall_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
